<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:theme="@style/darkTheme"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indonesia" />

    <Button
        android:id="@+id/btnEn"
        android:layout_toRightOf="@+id/btnId"
        android:text="@string/english"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/main2"
        style="@style/myButton"
        android:text="@string/go_to_main_2"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        style="@style/myButton"
        android:text="simpan"
        android:layout_below="@+id/main2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="Hola guys"
        style="@style/textRegular"
        android:layout_below="@+id/main2"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>